@@ -17,9 +17,9 @@ import bpy
 from bsmax.state import is_object_mode
 
 class BsMax_MT_Animation_Tools(bpy.types.Menu):
-	bl_idname = "BSMAX_MT_animationtools"
-	bl_label = "Animation"
-	bl_context = "objectmode"
+	bl_idname = 'BSMAX_MT_animationtools'
+	bl_label = 'Animation'
+	bl_context = 'objectmode'
 
 	@classmethod
 	def poll(self, ctx):
@@ -27,23 +27,25 @@ class BsMax_MT_Animation_Tools(bpy.types.Menu):
 
 	def draw(self, ctx):
 		layout=self.layout
-		layout.operator("anim.character_lister",text="Character Lister",icon="GHOST_DISABLED")
+		layout.operator('anim.character_lister', text='Character Lister', icon='GHOST_DISABLED')
 		if ctx.mode != 'POSE': # this is temprary
 			layout.separator()
-			layout.operator("anim.path_constraint",text="Path Constraint",icon="CON_FOLLOWPATH")
-			layout.operator("anim.location_constraint",text="Location Constraint",icon="CON_LOCLIMIT")
+			layout.operator('anim.path_constraint', text='Path Constraint', icon='CON_FOLLOWPATH')
+			layout.operator('anim.location_constraint', text='Location Constraint', icon='CON_LOCLIMIT')
 		layout.separator()
-		layout.operator("anim.link_constraint",text="Parent Constraint",icon="LINKED")
-		layout.operator("anim.link_to_world",text="Parent to World",icon="UNLINKED")
+		layout.operator('anim.link_constraint', text='Parent Constraint', icon='LINKED')
+		layout.operator('anim.link_to_world', text='Parent to World', icon='UNLINKED')
 		if ctx.mode != 'POSE': # this is temprary
 			layout.separator()
-			layout.operator("anim.lookat_constraint",text="Lookat Constraint",icon="CON_TRACKTO")
-			layout.operator("anim.orientation_constraint",text="Orientation Constraint",icon="CON_ROTLIMIT")
+			layout.operator('anim.lookat_constraint', text='Lookat Constraint', icon='CON_TRACKTO')
+			layout.operator('anim.orientation_constraint', text='Orientation Constraint', icon='CON_ROTLIMIT')
 		layout.separator()
-		layout.operator("anim.driver_fixer",text="Fix Override Driver Issue",icon="GHOST_ENABLED")
+		layout.operator('anim.driver_fixer', text='Fix Override Driver Issue', icon='GHOST_ENABLED')
+		layout.operator('anim.freeze_on', text='Freeze On', icon='TEMP')
+		
 
 def animation_menu(self, ctx):
-	self.layout.menu("BSMAX_MT_animationtools")
+	self.layout.menu('BSMAX_MT_animationtools')
 
 def register_menu():
 	bpy.utils.register_class(BsMax_MT_Animation_Tools)
