@@ -1,3 +1,6 @@
+#0,1,0,20210503
+	'W,E,R' auto Coordinate Toggle 'World/Local' disabled by default. 'Ctrl+W' for Active/Deactive (3DsMax mode).
+
 #0,1,0,20210502
 	'Parent Constraint' and 'parent to world' works on pose mode too.
 
